// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <View>
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
  </View>,
  <View />,
  <View>
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
  </View>,
]
`;

exports[`2. secondary two and two - smalltablet 1`] = `
<View>
  <View>
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <View>
      <Text
        allowFontScaling={false}
      >
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text
        allowFontScaling={false}
      >
        support-2
      </Text>
    </View>
  </View>
</View>
`;

exports[`3. secondary two and two - medium 1`] = `
<View>
  <View>
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text
        allowFontScaling={false}
      >
        secondary-2
      </Text>
    </View>
  </View>
  <View />
  <View>
    <View>
      <Text
        allowFontScaling={false}
      >
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text
        allowFontScaling={false}
      >
        support-2
      </Text>
    </View>
  </View>
</View>
`;

exports[`4. secondary two and two - wide 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      secondary-1
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      secondary-2
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
  </View>
</View>
`;

exports[`5. secondary two and two - huge 1`] = `
<View>
  <View>
    <Text
      allowFontScaling={false}
    >
      secondary-1
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-1
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      secondary-2
    </Text>
  </View>
  <View />
  <View>
    <Text
      allowFontScaling={false}
    >
      support-2
    </Text>
  </View>
</View>
`;
